// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tiger dateFilterConfigs should load date filter configs 1`] = `
InMemoryPaging {
  "allItems": Array [
    Object {
      "absoluteForm": Object {
        "localIdentifier": "ABSOLUTE_FORM",
        "name": "",
        "type": "absoluteForm",
        "visible": true,
      },
      "absolutePresets": Array [],
      "allTime": Object {
        "localIdentifier": "ALL_TIME",
        "name": "",
        "type": "allTime",
        "visible": true,
      },
      "ref": Object {
        "identifier": "defaultDateFilterProjectConfig",
      },
      "relativeForm": Object {
        "availableGranularities": Array [
          "GDC.time.month",
          "GDC.time.date",
          "GDC.time.quarter",
          "GDC.time.year",
        ],
        "localIdentifier": "RELATIVE_FORM",
        "name": "",
        "type": "relativeForm",
        "visible": true,
      },
      "relativePresets": Array [
        Object {
          "from": -14,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_15_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -29,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_30_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -44,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_45_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_HOUR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -7,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_8_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -11,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_12_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -6,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_7_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -29,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_30_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -89,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_90_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.month",
          "localIdentifier": "THIS_MONTH",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_MONTH",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -11,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_12_MONTHS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "THIS_QUARTER",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_QUARTER",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -3,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_4_QUARTERS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.year",
          "localIdentifier": "THIS_YEAR",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.year",
          "localIdentifier": "LAST_YEAR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
      ],
      "selectedOption": "THIS_MONTH",
    },
  ],
  "items": Array [
    Object {
      "absoluteForm": Object {
        "localIdentifier": "ABSOLUTE_FORM",
        "name": "",
        "type": "absoluteForm",
        "visible": true,
      },
      "absolutePresets": Array [],
      "allTime": Object {
        "localIdentifier": "ALL_TIME",
        "name": "",
        "type": "allTime",
        "visible": true,
      },
      "ref": Object {
        "identifier": "defaultDateFilterProjectConfig",
      },
      "relativeForm": Object {
        "availableGranularities": Array [
          "GDC.time.month",
          "GDC.time.date",
          "GDC.time.quarter",
          "GDC.time.year",
        ],
        "localIdentifier": "RELATIVE_FORM",
        "name": "",
        "type": "relativeForm",
        "visible": true,
      },
      "relativePresets": Array [
        Object {
          "from": -14,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_15_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -29,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_30_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -44,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_45_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_HOUR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -7,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_8_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -11,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_12_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -6,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_7_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -29,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_30_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -89,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_90_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.month",
          "localIdentifier": "THIS_MONTH",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_MONTH",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -11,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_12_MONTHS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "THIS_QUARTER",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_QUARTER",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -3,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_4_QUARTERS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.year",
          "localIdentifier": "THIS_YEAR",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.year",
          "localIdentifier": "LAST_YEAR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
      ],
      "selectedOption": "THIS_MONTH",
    },
  ],
  "limit": 10,
  "offset": 0,
  "totalCount": 1,
}
`;

exports[`tiger dateFilterConfigs should load empty date filter configs for out-of-range page 1`] = `
InMemoryPaging {
  "allItems": Array [
    Object {
      "absoluteForm": Object {
        "localIdentifier": "ABSOLUTE_FORM",
        "name": "",
        "type": "absoluteForm",
        "visible": true,
      },
      "absolutePresets": Array [],
      "allTime": Object {
        "localIdentifier": "ALL_TIME",
        "name": "",
        "type": "allTime",
        "visible": true,
      },
      "ref": Object {
        "identifier": "defaultDateFilterProjectConfig",
      },
      "relativeForm": Object {
        "availableGranularities": Array [
          "GDC.time.month",
          "GDC.time.date",
          "GDC.time.quarter",
          "GDC.time.year",
        ],
        "localIdentifier": "RELATIVE_FORM",
        "name": "",
        "type": "relativeForm",
        "visible": true,
      },
      "relativePresets": Array [
        Object {
          "from": -14,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_15_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -29,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_30_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -44,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_45_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_HOUR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -7,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_8_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -11,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_12_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -6,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_7_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -29,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_30_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -89,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_90_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.month",
          "localIdentifier": "THIS_MONTH",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_MONTH",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -11,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_12_MONTHS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "THIS_QUARTER",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_QUARTER",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -3,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_4_QUARTERS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": 0,
          "granularity": "GDC.time.year",
          "localIdentifier": "THIS_YEAR",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        Object {
          "from": -1,
          "granularity": "GDC.time.year",
          "localIdentifier": "LAST_YEAR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
      ],
      "selectedOption": "THIS_MONTH",
    },
  ],
  "items": Array [],
  "limit": 10,
  "offset": 1,
  "totalCount": 1,
}
`;
